syntax = "proto3";

package greptime.v1.codec;

message PhysicalPlanNode {
  oneof PhysicalPlanType {
    ProjectionExecNode projection = 1;
    MockInputExecNode mock = 99;
    // TODO(fys): impl other physical plan node
  }
}

message ProjectionExecNode {
  PhysicalPlanNode input = 1;
  repeated PhysicalExprNode expr = 2;
  repeated string expr_name = 3;
}

message PhysicalExprNode {
  oneof ExprType {
    PhysicalColumn column = 1;

    PhysicalBinaryExprNode binary_expr = 2;

    // null checks
    PhysicalIsNull is_null_expr = 3;
    PhysicalIsNotNull is_not_null_expr = 4;
    PhysicalNot not_expr = 5;

    PhysicalCaseNode case = 6;

    // TODO(fys): impl other physical expr node
  }
}

message PhysicalBinaryExprNode {
  PhysicalExprNode l = 1;
  PhysicalExprNode r = 2;
  string op = 3;
}

message PhysicalColumn {
  string name = 1;
  uint64 index = 2;
}

message MockInputExecNode {
  string name = 1;
}

message PhysicalIsNull {
  PhysicalExprNode expr = 1;
}

message PhysicalIsNotNull {
  PhysicalExprNode expr = 1;
}

message PhysicalNot {
  PhysicalExprNode expr = 1;
}

message PhysicalCaseNode {
  PhysicalExprNode expr = 1;
  repeated PhysicalWhenThen when_then_expr = 2;
  PhysicalExprNode else_expr = 3;
}

message PhysicalWhenThen {
  PhysicalExprNode when_expr = 1;
  PhysicalExprNode then_expr = 2;
}
